fixed div overflow

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,6 +36,10 @@ body{
     overflow: auto; 
  }
 
+ .burgerCol {
+    height: 150px;
+
+ }
 
 img {
     height: 200px; 
